Fix problem with game modal(game-info container for list view) being rendered in wrong container which caused duplications.

--- a/app/assets/stylesheets/list_view.scss
+++ b/app/assets/stylesheets/list_view.scss
@@ -75,6 +75,7 @@
     .uk-modal-body {
         border-radius: 5px;
         width: 800px;
+        padding-right: 40px;
     }
 
     .info-by {
@@ -83,11 +84,20 @@
 
     .info-year {
         color: #333333;
+        margin-bottom: 0px;
     }
 
     .gw-b {
         color: #999;
         border-color: #c3c3c3;
+    }
+
+    hr {
+        margin: 15px 0px;
+    }
+
+    .info-platform {
+        color:red;
     }
 }
 
