--- a/app/views/my_games/_list.html.erb
+++ b/app/views/my_games/_list.html.erb
@@ -45,7 +45,7 @@
   </div>
 </div>
 
-<div class="t-game-show" uk-modal>
+<div class="t-game-show" uk-modal ="container: .my-games">
   <div class="uk-modal-dialog uk-modal-body uk-margin-auto-vertical">
     <button class="uk-modal-close-default" type="button" uk-close></button>
     <div class="modal-content">
