--- a/app/views/cover_view/_game_info.html.erb
+++ b/app/views/cover_view/_game_info.html.erb
@@ -19,7 +19,7 @@
         <p class="info-by"><%= (devs = game[:developers]) ? "by " + devs.join(', ') : '' %></p>
         <!-- COVER -->
         <% if cover %>
-        <%= image_tag('', class: 'game-cover info-cover', width: cover[:width], 'data-src' => cover[:url], alt: game_name, 'draggable' => 'false', 'uk-img' => "target: #gc-#{ igdb_id }" ) %>
+        <%= image_tag('', alt: '', class: 'game-cover info-cover', width: cover[:width], 'data-src' => cover[:url], 'draggable' => 'false', 'uk-img' => "target: #gc-#{ igdb_id }" ) %>
         <% else %>
         <div class="i-no-cover">
             <div>
