--- a/app/views/my_games/_covers_info.html.erb
+++ b/app/views/my_games/_covers_info.html.erb
@@ -20,7 +20,7 @@
         <% end %>
         <!-- COVER -->
         <% if cover %>
-        <%= image_tag('', class: 'game-cover info-cover', width: cover[:width], 'data-src' => cover[:url], alt: game_name, 'draggable' => 'false', 'uk-img' => "target: #gc-#{ id }" ) %>
+        <%= image_tag('', alt: '', class: 'game-cover info-cover', width: cover[:width], 'data-src' => cover[:url], 'draggable' => 'false', 'uk-img' => "target: #gc-#{ id }" ) %>
         <% else %>
         <div class="i-no-cover">
             <div>
