--- a/app/views/cover_view/_game_info.html.erb
+++ b/app/views/cover_view/_game_info.html.erb
@@ -19,7 +19,9 @@
         <p class="info-by"><%= (devs = game[:developers]) ? "by " + devs.join(', ') : '' %></p>
         <!-- COVER -->
         <% if cover %>
-        <%= image_tag('', alt: '', class: 'game-cover info-cover', width: cover[:width], 'data-src' => cover[:url], 'draggable' => 'false', 'uk-img' => "target: #gc-#{ igdb_id }" ) %>
+        <div class="c-cover" style="width: <%= cover[:width] %>px; height: <%= cover[:height] %>px">
+        <%= image_tag('', alt: '', class: 'game-cover', width: cover[:width], 'data-src' => cover[:url], 'draggable' => 'false', 'uk-img' => "target: #gc-#{ igdb_id }" ) %>
+        </div>
         <% else %>
         <div class="i-no-cover">
             <div>
