--- a/app/views/static_pages/privacy.html.erb
+++ b/app/views/static_pages/privacy.html.erb
@@ -1,4 +1,9 @@
-<h1>privacy</h1>
 
 
-<button class="rona">Aasdokr</button>
+
+
+<div class="dick">
+<a href="">lump</a>
+<a href="">pump</a>
+<a href="">dog</a>
+</div>
