--- a/app/assets/stylesheets/list_view_today_01.scss
+++ b/app/assets/stylesheets/list_view_today_01.scss
@@ -1,118 +1,73 @@
 .t-game {
+    border-radius: 3px;
+    background: #f7f7f7;
     margin-bottom: 10px;
     box-shadow: -3px 4px 3px -2px rgba(0, 0, 0, 0.11);
     font-size: 14px;
     color: $light_grey;
+
+    padding-left: 10px;
+
     position: relative;
 
     div {
         box-sizing: border-box;
-        padding-top: 10px;
-        padding-bottom: 10px;
-    }
-
-    .gw-b {
-        background: none;
-        font-size: 12px;
-        border: none;
-        border-radius: 0px;
-        color: #9e9e9e;
-        padding: 0px;
-        margin-left: 5px;
-        vertical-align: text-bottom;
+        padding: 10px 10px 10px 0px;
     }
 }
 
 
 .t-menu {
+    width: 90px;
+    height: 44px;
+    background: black;
     position: absolute;
-    height: 100%;
-    width: 10%;
-    width: 83px;
-    /* left: 30%; */
-    right: -83px;
-    /* left: 0; */
+    right: 0;
     top: 0;
-    background: #f7f7f7;
-    /* background: linear-gradient(90deg, #f7f7f700, #ffffffd1); */
     border-radius: 0px 3px 3px 0px;
-    text-align: right;
-    transition: 0.3s;
-    /* right: 0px; */
-    /* opacity: 0; */
-    /* padding-left: 29px !important; */
-    /* z-index: 0; */
-    /* text-align: center; */
-    // box-shadow: 0px 4px 3px -2px rgba(0, 0, 0, 0.11);
-    // border-left: 1px solid #bababa;
-    padding-right: 10px;
+    right: 100px;
+    transition: 0.7s;
+    padding: 10px !important;
 }
 
 .t-menu.out {
-    right: 0px;
+    width: 0px;
 }
 
-.ron {
-    width: 100%;
-    position: absolute;
-    height: 100%;
-    transition: 0.3s;
-    top: 0;
-    z-index: -1;
-    right: 0;
-    box-shadow: -6px 4px 3px -2px rgba(0, 0, 0, 0.11);
+.t-menu.out a {
+    transform: translateX(-100px);
 }
 
-.ron.out {
-    width: 0%;
-}
-
-.t-added {
-    width: 10%;
-    text-align: right;
-    z-index: 1;
-    background: #f7f7f7;
-    border-radius: 0px;
-    padding-right: 10px;
-}
-
-.t-added.out {
-border-radius: 0px 3px 3px 0px;
-  transition: 0.3s;
-}
-
-div.t-name {
-    padding-left: 10px;
-    border-radius: 3px 0px 0px 3px;
-    background: #f7f7f7;
+.t-name {
     font-size: 16px;
     color: $dark_grey;
-    width: 35%;
+    width: 30%;
 }
 
 .t-release {
-    background: #f7f7f7;
     width: 5%;
     text-align: center;
 }
 
 .t-developer {
-    background: #f7f7f7;
-    width: 30%;
+    width: 35%;
 }
 
 .t-platform {
-    background: #f7f7f7;
     width: 15%;
-
 }
 
 .t-format {
-width: 5%;
+    width: 5%;
     text-align: center;
-    z-index: 2;
-    background: #f7f7f7;
 }
+
+.t-added {
+    width: 10%;
+    text-align: right;
+}
+
+
 
 .t-game-show {
     .uk-modal-body {
