--- a/app/assets/stylesheets/list_view.scss
+++ b/app/assets/stylesheets/list_view.scss
@@ -23,65 +23,55 @@
     }
 }
 
-
 .t-menu {
     position: absolute;
     height: 100%;
-    width: 10%;
     width: 83px;
-    /* left: 30%; */
-    right: -83px;
-    /* left: 0; */
     top: 0;
+    right: 0px;
+    padding-right: 10px;
     background: #f7f7f7;
-    /* background: linear-gradient(90deg, #f7f7f700, #ffffffd1); */
     border-radius: 0px 3px 3px 0px;
     text-align: right;
     transition: 0.3s;
-    /* right: 0px; */
-    /* opacity: 0; */
-    /* padding-left: 29px !important; */
-    /* z-index: 0; */
-    /* text-align: center; */
-    // box-shadow: 0px 4px 3px -2px rgba(0, 0, 0, 0.11);
-    // border-left: 1px solid #bababa;
-    padding-right: 10px;
 }
 
 .t-menu.out {
-    right: 0px;
+    right: -83px;
 }
 
-.ron {
-    width: 100%;
+.menu-shadow {
     position: absolute;
+    width: 0%;
     height: 100%;
-    transition: 0.3s;
     top: 0;
-    z-index: -1;
     right: 0;
+    z-index: -1;
     box-shadow: -6px 4px 3px -2px rgba(0, 0, 0, 0.11);
+    transition: 0.3s;
 }
 
-.ron.out {
-    width: 0%;
+.menu-shadow.out {
+    width: 100%;
 }
 
 .t-added {
     width: 10%;
-    text-align: right;
     z-index: 1;
     background: #f7f7f7;
-    border-radius: 0px;
     padding-right: 10px;
+    border-right: 1px solid #f7f7f7;
+    border-radius: 0px 3px 3px 0px;
+    text-align: right;
+    transition: 0.3s;
 }
 
 .t-added.out {
-border-radius: 0px 3px 3px 0px;
-  transition: 0.3s;
+    border-right: 1px solid #bababa;
+    border-radius: 0px;
 }
 
-div.t-name {
+.t-name {
     padding-left: 10px;
     border-radius: 3px 0px 0px 3px;
     background: #f7f7f7;
