Rewrite some js form functions so copy/move and edit form can work in list view. Add modal for forms to list view. Rewrite toggleEditMenu function so it could work in list view as well. Add funtion listHover for highlightning rows on hover.

--- a/app/assets/stylesheets/game_info.scss
+++ b/app/assets/stylesheets/game_info.scss
@@ -53,6 +53,10 @@
     vertical-align: text-bottom;
 }
 
+.gw-b:focus {
+    text-decoration: none;
+}
+
 .info-year {
     font-size: 14px;
     color: rgba(255, 255, 255, 0.7);
