--- a/app/assets/stylesheets/panels_view.scss
+++ b/app/assets/stylesheets/panels_view.scss
@@ -648,7 +648,7 @@ hr.md {
     color: white !important;
 }
 
-.pd-slide:hover .pd-arr {
+.pd-slide:hover .pd-arr, .uk-slider:hover .pd-arr {
     opacity: 1;
 }
 
