--- a/app/views/my_games/_table_show.html.erb
+++ b/app/views/my_games/_table_show.html.erb
@@ -62,8 +62,8 @@
                 </li>
                 <% end %>
             </ul>
-            <a class="uk-position-center-left uk-position-small uk-hidden-hover" href="#" uk-slidenav-previous uk-slider-item="previous"></a>
-            <a class="uk-position-center-right uk-position-small uk-hidden-hover" href="#" uk-slidenav-next uk-slider-item="next"></a>
+            <a class="pd-arr left uk-position-small uk-hidden-hover" href="#" uk-slidenav-previous uk-slider-item="previous"></a>
+            <a class="pd-arr right uk-position-small uk-hidden-hover" href="#" uk-slidenav-next uk-slider-item="next"></a>
         </div>
         <% end %>
     </div>
