--- a/app/views/games/edit_form.js.erb
+++ b/app/views/games/edit_form.js.erb
@@ -1,2 +1,11 @@
-$("#edit-form-<%= @game.id %>").html("<%= j(render partial: 'my_games/edit_form', locals: { game: @game, collection: @collection, view: @view }) %>");
-preselectPlatform('edit', <%= @game.id %>, <%= @game.platform %>);
+var view = "<%= @view %>";
+var form;
+
+if (view === 'list') {
+  $("#t-ops .modal-content").html("<%= j(render partial: 'my_games/edit_form', locals: { game: @game, collection: @collection, view: @view }) %>");
+  form = 'list'
+} else {
+  $("#edit-form-<%= @game.id %>").html("<%= j(render partial: 'my_games/edit_form', locals: { game: @game, collection: @collection, view: @view }) %>");
+  form = 'edit'
+}
+preselectPlatform(form, <%= @game.id %>, <%= @game.platform %>);
