--- a/app/views/my_games/_list.html.erb
+++ b/app/views/my_games/_list.html.erb
@@ -6,7 +6,7 @@
     <div class="srch-div"></div>
     <%= sort_link(@q, :added,'Date Added', {}, {remote: true}) %>
 </div>
-<div class="uk-grid-collapse panels-grid" uk-grid>
+<div class="uk-grid-collapse list-grid" uk-grid>
     <div class="uk-width-1-1 page-info-front">
         <div class="page-links pr">
             <%= js_will_paginate @games, container: false %>
@@ -15,8 +15,11 @@
     <% @games.select('games.*, collection_games.created_at').each do |game| %>
     <% id = game.id %>
     <% needs_platform = collection.needs_platform %>
+    <% extra = 'out' if edit_open? %>
     <div class="t-game uk-width-1-1 uk-grid-collapse" uk-grid>
-        <%= content_tag :div, class: 't-name' do %>
+         <%= link_to('', table_show_url(game.id), class: 't-trigger',
+          remote: true, 'uk-toggle': 'target: .t-game-show') %>
+        <%= content_tag :div, class: 't-name t' do %>
         <%= game.name %>
         <% if (status_id = game[:status]) && status_id != 0 %>
         <%= content_tag :button, "/ #{ convert_status(status_id) }", class: 'gw-b' %>
@@ -26,24 +29,24 @@
         <% end %>
         <% end %>
         <% release = game[:first_release_date] ? Time.at(game[:first_release_date]).year : '-' %>
-        <%= content_tag :div, release, class: 't-release' %>
+        <%= content_tag :div, release, class: 't-release t' %>
         <% developer = !game.developers.empty? ? game.developers.map(&:name).join(', ') : '-' %>
-        <%= content_tag :div, developer, class: 't-developer' %>
+        <%= content_tag :div, developer, class: 't-developer t' %>
         <% if needs_platform %>
-        <%= content_tag :div, game.platform_name, class: 't-platform' %>
-        <%= content_tag :div, game.physical ? 'Physical' : 'Digital', class: 't-format' %>
+        <%= content_tag :div, game.platform_name, class: 't-platform t' %>
+        <%= content_tag :div, game.physical ? 'Physical' : 'Digital', class: 't-format t' %>
         <% end %>
-        <%= content_tag :div, game.created_at.to_date, class: 't-added' %>
-        <div class="t-menu">
+        <%= content_tag :div, game.created_at.to_date, class: "t-added t #{ extra }" %>
+        <%= content_tag :div, class: "t-menu t #{ extra }" do %>
             <% if needs_platform %>
-            <%= link_to('', edit_form_url(game_id: id, collection_id: collection.id, view: @view), id: "g-edit-#{ id }", class: 'uk-icon-link', remote: true, 'uk-icon': 'pencil', 'uk-tooltip' => "title: Edit; pos: right") %>
+            <%= link_to('', edit_form_url(game_id: id, collection_id: collection.id, view: @view), id: "g-edit-#{ id }", class: 'uk-icon-link', remote: true, 'uk-icon': 'pencil', 'uk-toggle': 'target: #t-ops', 'uk-tooltip' => "title: Edit; pos: top") %>
             <% else %>
             <%= content_tag(:a, '', class: 'uk-icon-link cf-disabled', 'uk-icon': 'pencil') %>
             <% end %>
-            <%= link_to('', cm_form_url(game_id: id, collection_id: collection.id, view: @view), id: "g-copy-#{ id }", class: 'uk-icon-link', remote: true, 'uk-icon': 'copy', 'uk-tooltip' => "title: Copy / Move; pos: right") %>
-            <%= link_to('', remove_url(game_id: id, collection_id: collection.id, view: @view), id: "g-delete-#{ id }", class: 'uk-icon-link', method: :delete, remote: true, 'uk-icon': 'trash', 'uk-tooltip': 'title: Delete; pos: right') %>
-            <div class="menu-shadow"></div>
-        </div>
+            <%= link_to('', cm_form_url(game_id: id, collection_id: collection.id, view: @view), id: "g-copy-#{ id }", class: 'uk-icon-link', remote: true, 'uk-icon': 'copy', 'uk-toggle': 'target: #t-ops', 'uk-tooltip' => "title: Copy / Move; pos: top") %>
+            <%= link_to('', remove_url(game_id: id, collection_id: collection.id, view: @view), id: "g-delete-#{ id }", class: 'uk-icon-link', method: :delete, remote: true, 'uk-icon': 'trash', 'uk-toggle': 'target: #t-ops', 'uk-tooltip': 'title: Delete; pos: top') %>
+            <%= content_tag :div,nil, class: "menu-shadow #{ extra }" %>
+        <% end %>
     </div>
     <% end %>
     <div class="uk-width-1-1 page-links bottom">
@@ -58,3 +61,12 @@
         </div>
     </div>
 </div>
+<div id="t-ops" uk-modal ="container: .my-games">
+    <div class="uk-modal-dialog uk-modal-body uk-margin-auto-vertical">
+        <!-- <button class="uk-modal-close-default" type="button" uk-close></button> -->
+        <div class="modal-content">
+            Loading...
+        </div>
+    </div>
+</div>
+
