--- a/app/assets/stylesheets/list_view.scss
+++ b/app/assets/stylesheets/list_view.scss
@@ -2,7 +2,8 @@
     .uk-modal-body {
         background: #ececec;
         font-size: 14px;
-        width: 350px;
+        width: auto;
+        min-width: 270px;
         border-radius: 5px;
     }
 }
