--- a/app/assets/stylesheets/panels_view.scss
+++ b/app/assets/stylesheets/panels_view.scss
@@ -532,7 +532,8 @@ hr.md {
     margin: 0px;
     line-height: 21px;
     font-size: 12px;
-    color: #929292;
+    // color: #929292;
+    // color: #666;
 }
 
 .g-nav ul {
