--- a/app/views/my_games/_table_show.html.erb
+++ b/app/views/my_games/_table_show.html.erb
@@ -5,7 +5,7 @@
         <% if cover && cover[:from_scrn].nil? %>
         <div class="t-cover" style="width: <%= cover[:width] %>px; height: <%= cover[:height] %>px">
         <div class="spinner"><%= svg 'loading' %></div>
-        <%= image_tag('', alt: '', class: 'game-cover', width: cover[:width], 'data-src' => cover[:url], 'draggable' => 'false', 'uk-img' => '') %>
+        <%= image_tag('', alt: '', class: 'game-cover t-cover', width: cover[:width], 'data-src' => cover[:url], 'draggable' => 'false', 'uk-img' => '') %>
         </div>
         <% else %>
         <div class="i-no-cover">
