--- a/app/assets/stylesheets/panels_view.scss
+++ b/app/assets/stylesheets/panels_view.scss
@@ -287,6 +287,10 @@ hr.md {
     cursor: initial;
 }
 
+.uk-icon-link.cf-disabled:hover {
+    color: #afafaf;
+}
+
 .cf-name {
     padding-left: 10px;
     float: right;
