Add minor changes to no-cover (smaller no-cover icon, smaller game's title on no-cover).

--- a/app/assets/stylesheets/cover_view.scss
+++ b/app/assets/stylesheets/cover_view.scss
@@ -5,7 +5,7 @@
     overflow-y: hidden;
     border-top: 1px solid #bababa;
     margin: 0 auto 5px;
-    // width: 150px;
+    width: 150px;
 
     ul {
         display: inline-flex;
